@@ -17,7 +17,7 @@
 #define ACCEPT_TIMEOUT_SECS 1
 #define SHORT_TIMEOUT_SECS 2
 #define WRITE_TIMEOUT_SECS 60 * 5 
-#define READ_LONG_TIMEOUT_SECS 5
+//#define READ_LONG_TIMEOUT_SECS 3
 
 #define MAX_BUFSIZE 1024 * 8
 #define INPUT_BUF_SIZE 1024 * 8
@@ -40,7 +40,7 @@ static char *error_log_path = NULL; //error log path
 static int err_log_fd = -1; //error log
 
 static int is_keep_alive = 0; //keep alive support
-//static int keep_alive_timeout = 5;
+static int keep_alive_timeout = 5;
 
 int max_content_length = 1024 * 1024 * 16; //max_content_length
 
@@ -140,7 +140,7 @@ close_conn(client_t *cli, picoev_loop* loop)
         new_client = new_client_t(cli->fd, cli->remote_addr, cli->remote_port);
         new_client->keep_alive = 1;
         init_parser(new_client, server_name, server_port);
-        picoev_add(main_loop, new_client->fd, PICOEV_READ, READ_LONG_TIMEOUT_SECS, r_callback, (void *)new_client);
+        picoev_add(main_loop, new_client->fd, PICOEV_READ, keep_alive_timeout, r_callback, (void *)new_client);
     }
     PyMem_Free(cli);
 
@@ -568,7 +568,7 @@ accept_callback(picoev_loop* loop, int fd, int events, void* cb_arg)
             remote_port = ntohs(client_addr.sin_port);
             client = new_client_t(client_fd, remote_addr, remote_port);
             init_parser(client, server_name, server_port);
-            picoev_add(loop, client_fd, PICOEV_READ, READ_LONG_TIMEOUT_SECS, r_callback, (void *)client);
+            picoev_add(loop, client_fd, PICOEV_READ, keep_alive_timeout, r_callback, (void *)client);
         }else{
             if (errno != EAGAIN && errno != EWOULDBLOCK) {
                 PyErr_SetFromErrno(PyExc_IOError);
@@ -894,10 +894,15 @@ meinheld_set_keepalive(PyObject *self, PyObject *args)
     if (!PyArg_ParseTuple(args, "i", &on))
         return NULL;
     if(on < 0){
-        PyErr_SetString(PyExc_ValueError, "must be 0 or 1");
+        PyErr_SetString(PyExc_ValueError, "keep alive value out of range ");
         return NULL;
     }
     is_keep_alive = on;
+    if(is_keep_alive){
+        keep_alive_timeout = on;
+    }else{
+        keep_alive_timeout = 2;
+    }
     Py_RETURN_NONE;
 }
 
@@ -1131,7 +1136,7 @@ static PyMethodDef WsMethods[] = {
     {"access_log", meinheld_access_log, METH_VARARGS, "set access log file path."},
     {"error_log", meinheld_error_log, METH_VARARGS, "set error log file path."},
 
-    {"set_keepalive", meinheld_set_keepalive, METH_VARARGS, "set keep-alive support. default 0. (disable keep-alive)"},
+    {"set_keepalive", meinheld_set_keepalive, METH_VARARGS, "set keep-alive support. value set timeout sec. default 0. (disable keep-alive)"},
     {"get_keepalive", meinheld_get_keepalive, METH_VARARGS, "return keep-alive support."},
     
     {"set_max_content_length", meinheld_set_max_content_length, METH_VARARGS, "set max_content_length"},
